--- a/Navpage.html
+++ b/Navpage.html
@@ -27,7 +27,7 @@
         <h2 id="pageTitle">CookPal</h2>
 	</div>
 	<div>
-	<button id="signOutB">Sign&nbsp;out</button> 
+	<button id="signOutB">Sign&nbsp;in</button> 
 	</div>
 </nav>
 <main>
