--- a/Navpage.html
+++ b/Navpage.html
@@ -4,7 +4,7 @@
 <head>
 <!doctype html>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<link href="Navpagecss.css" rel="stylesheet" />
+<link href="styles.css" rel="stylesheet" />
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 <title>CookPal</title>
 </head>
