--- a/Navpage(loggedIn).html
+++ b/Navpage(loggedIn).html
@@ -10,25 +10,38 @@
 </head>
 
 <body>
-
+<!--Recent update-->
+<!--This navigation is for pages where the user is logged into their account. The sidebar now shows home, recipes, weekly plan, and grocery list-->
+<!--It also now has a sign out button-->
+<!--Recent update-->
 
 <!--Nav contains collapsible sidebar with hamburger menu, title, and sign out button (if user is signed in)-->
 <!-- If the user is not signed in, another button will need to be added to sign in-->
 <nav>
 	<div id="sidebar" class="cSidebar">
 	    <button class="openButton" onclick="openNav()">☰</button>
-		<a href="#">About&nbsp;us</a> 
-		<a href="#">News</a> 
-		<a href="#">Support</a>
+		<a href="#">Home</a> 
+		<a href="#">Recipes</a> 
+		<div id="recipeOpt">
+		<a href="#">Add&nbsp;Recipe</a>
+		<a href="#">Favorites</a>
+		<a href="#">Desserts</a>
+		<a href="#">Breakfast</a>
+		<a href="#">Vegan</a>
+		</div>
+		<a href="#">Weekly&nbsp;Plan</a>
+		<a href="#">Grocery&nbsp;List</a>
+		
 	</div>
 	<div id="navbutton">
 		<button class="openButton" onclick="openNav()">☰</button></div>
-	<div id="navRest">
-        <h2 id="pageTitle">CookPal</h2>
-	</div>
+	
+        <h2 id="pageTitle1B">CookPal</h2>
+	
 	<div>
-	<button id="signInB">Sign&nbsp;in</button> 
+	<button id="navButton">Sign&nbsp;out</button> 
 	</div>
+	
 </nav>
 <main>
 <!-- Page content goes here-->
@@ -51,10 +64,10 @@
 <script>
 function openNav() {
 var e = document.getElementById("sidebar");
-if (e.style.width == '275px')
+if (e.style.width == '260px')
 {e.style.width = '0px';}
 else
-{e.style.width='275px';}
+{e.style.width='260px';}
 }
 function closeNav()
 {document.getElementById("sidebar").style.width="0";}
